Convert to StateAdapt

--- a/projects/auth/src/lib/login-page/login-page.component.html
+++ b/projects/auth/src/lib/login-page/login-page.component.html
@@ -7,7 +7,7 @@
   <ng-template #loginForm>
     <bco-login-form
       [error]="error$ | async"
-      (login)="onLogin($event)"
+      (login)="login$.next($event)"
     ></bco-login-form>
   </ng-template>
 </ng-template>
