--- a/projects/auth/src/lib/user-dropdown/user-dropdown.component.html
+++ b/projects/auth/src/lib/user-dropdown/user-dropdown.component.html
@@ -4,7 +4,7 @@
   <button
     mat-icon-button
     type="button"
-    (click)="onLogout()"
+    (click)="logout$.next()"
     matTooltip="Logout"
   >
     <mat-icon>exit_to_app</mat-icon>
